[tool.poetry]
name = "contacts-api"
version = "0.1.0"
description = ""
authors = ["Gerenzeo <124388411+Gerenzeo@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "contacts_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
psycopg2 = "^2.9.7"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
pydantic = {extras = ["email"], version = "^2.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
